# gradio5-pic-to-header

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.en.md
pic_to_header/: app.py
pic_to_header/modules/: image_processor.py  mask_manager.py  utils.py
